# DJANGO_PET_SUPLIES

./: .env.example  .gitignore  README.md  pyproject.toml
locallibrary/: asgi.py  settings.py  urls.py  wsgi.py
zooinfo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
zooinfo/migrations/: 0001_initial.py  0002_productdetail_tag_product_tags.py  0003_remove_productdetail_shelf_life_days_and_more.py
zooinfo/templates/: base_generic.html
zooinfo/templates/catalog/: transaction_form.html
zooinfo/templates/registration/: login.html
zooinfo/templates/zooinfo/: financial_report.html  product_list.html  transaction_form.html
